<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.clarussecure</groupId>
  <artifactId>proxy</artifactId>
  <version>1.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>CLARUS proxy</name>
  <modules>
    <module>common</module>
    <module>modules/anonymization</module>
    <module>modules/encryption</module>
    <module>modules/splitting</module>
    <module>plugins/http</module>
    <module>plugins/pgsql</module>
    <module>plugins/tcp</module>
    <module>main</module>
  </modules>
  <organization>
    <name>The CLARUS Consortium</name>
    <url>http://www.clarussecure.eu/</url>
  </organization>
  <licenses>
    <license>
      <name>TO BE DEFINED</name>
      <url>TO BE DEFINED</url>
      <distribution>TO BE DEFINED</distribution>
    </license>
  </licenses>
  <properties>
    <jdk.version>1.8</jdk.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <team.name>CLARUS Team</team.name>
    <skip.surefire.tests>true</skip.surefire.tests>
    <doc.generation.skip>true</doc.generation.skip>
    <install.dir>${basedir}/install</install.dir>
    <plugin.compiler.version>3.5.1</plugin.compiler.version>
    <plugin.surefire.version>2.12.4</plugin.surefire.version>
    <plugin.failsafe.version>2.19.1</plugin.failsafe.version>
    <plugin.dependency.version>2.10</plugin.dependency.version>
    <plugin.resources.version>3.0.1</plugin.resources.version>
    <plugin.clean.version>3.0.0</plugin.clean.version>
    <plugin.jar.version>3.0.2</plugin.jar.version>
    <plugin.license.version>1.12</plugin.license.version>
    <plugin.formatter.version>[2.0.0,)</plugin.formatter.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <inherited>false</inherited>
        <executions>
          <execution>
            <id>copy-script</id>
            <phase>install</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${install.dir}</outputDirectory>
              <resources>
                <resource>
                  <directory>${basedir}/src/main/scripts</directory>
                  <includes>
                    <include>proxy.bat</include>
                  </includes>
                  <filtering>false</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <inherited>false</inherited>
        <configuration>
          <filesets>
            <fileset>
              <directory>${install.dir}</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>net.revelc.code.formatter</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <version>2.0.1</version>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <configFile>${project.basedir}/eclipse-formatter-config.xml</configFile>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${plugin.compiler.version}</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${plugin.surefire.version}</version>
          <configuration>
            <skipTests>${skip.surefire.tests}</skipTests>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${plugin.failsafe.version}</version>
          <executions>
            <execution>
              <id>integration-test</id>
              <goals>
                <goal>integration-test</goal>
              </goals>
            </execution>
            <execution>
              <id>verify</id>
              <goals>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <forkCount>1</forkCount>
            <reuseForks>false</reuseForks>
            <argLine>-Djava.ext.dirs="${java.ext.dirs}";${project.parent.relativePath}/install/ext-libs</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${plugin.dependency.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${plugin.resources.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${plugin.clean.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${plugin.jar.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${plugin.license.version}</version>
        </plugin>
        <plugin>
          <groupId>net.revelc.code.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>${plugin.formatter.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
